--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -134,7 +134,7 @@
           <%= image_tag item.image, class: "item-img" if item.image.attached? %>
 
           <%# 商品が売れていればsold outを表示しましょう %>
-          <% if @item.present?%>
+          <% if item.order != nil %>
           <div class='sold-out'>
             <span>Sold Out!!</span>
           </div>
