--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -9,7 +9,7 @@
     <div class='item-img-content'>
       <%= image_tag @item.image,class:"item-box-img" if @item.image.attached? %>
       <%# 商品が売れている場合は、sold outを表示しましょう %>
-        <% if @items.present?%>
+        <% if @item.order != nil %>
       <div class='sold-out'>
         <span>Sold Out!!</span>
       </div>
@@ -32,7 +32,7 @@
     <p class='or-text'>or</p>
     <%= link_to '削除', item_path(@item.id), method: :delete, class:'item-destroy' %>
     <%# 商品が売れていない場合はこちらを表示しましょう %>
-     <% else %>
+     <% elsif user_signed_in? && @item.user_id != current_user.id && @item.order == nil %>
     <%= link_to '購入画面に進む', item_orders_path(@item.id), class:"item-red-btn"%>
      <% end %>
      <% end %>
